# concept_critic_models

./: .gitignore  .venv.freeze.txt  README.md  STAGE_0_PLAN.md  benchmark_registry.py  codebase_overview.docx  codebase_overview.html  codebase_overview.md  compare.py  compare_sweep.py  concept_accuracy_eval.py  correlation_test.py  generate_report.py  main.py  play_armed_corridor.py  plot_results.py  pyproject.toml  replay.py  requirements.txt  run_all.sh  run_all_end_to_end.sh  run_all_stacked.sh  run_both_envs_comparison.sh  run_dynamic_obstacles_full.sh  run_e2e_comparison.sh  run_hidden_vel_comparison.sh  run_mc_comparison.sh  run_mc_long.sh  run_short.sh  run_tmaze.sh  run_tmaze_comparison.sh  run_tmaze_full.sh  run_tmaze_sparse.sh  runtime_utils.py  setup_env.sh  steerability_eval.py  test_video.py  train.py
cluster/: aggregate.py  benchmarks_manifest.json  dry_run.sbatch  run_jobs.sh  run_pilot.py  run_single.sbatch  run_single.sh  run_sweep.py  setup_env.sh
envs/: __init__.py  armed_corridor.py  armed_corridor_core.py  base.py  cartpole.py  cup_transport.py  cup_transport_env.py  dynamic_obstacles.py  hidden_velocity.py  highway.py  highway2.py  lunar_lander.py  momentum_corridor.py  momentum_corridor_core.py  mountain_car.py  phase_crossing.py  phase_crossing_core.py  pick_place.py  record.py  registry.py  synchrony_window.py  synchrony_window_core.py  tmaze.py  visualize.py
experiments/: run_env.sh  run_gru_end.sh  run_gru_joint.sh  run_interp.py  run_interp.sh  run_none_end.sh  run_none_joint.sh  run_none_two_phase.sh  run_stacked_end.sh  run_sweep.sh  (+1 more)
(+32 files in other folders)
