[project]
name = "concept-critic-models"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium[box2d]>=0.29.0",
    "matplotlib>=3.7.0",
    "minigrid>=2.3.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "pygame>=2.1.0",
    "scikit-learn>=1.3.0",
    "stable-baselines3>=2.0.0",
    "torch>=2.0.0",
]
